include ../Makefile.inc

all: links archive

links: pixmap_tree
	ln -sf /$(PIXMAP_ROOT_DIR)/workstation/sidebar-bg.png \
	       $(PIXMAP_ROOT_DIR)/sidebar-bg.png
	ln -sf /$(PIXMAP_ROOT_DIR)/workstation/sidebar-logo.png \
	       $(PIXMAP_ROOT_DIR)/sidebar-logo.png
	ln -sf /$(PIXMAP_ROOT_DIR)/workstation/topbar-bg.png \
	       $(PIXMAP_ROOT_DIR)/topbar-bg.png